add annotate button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,9 @@
         </li>
         {% endif %}
       {% endfor %}
+      {% if page.type == "texto" %}
+        <li class="inline-block block-lg text-right ml-1 ml-lg-0"><span style='cursor:pointer;' onclick="javascript:var hypothesis = document.createElement('script');hypothesis.setAttribute('src','https://hypothes.is/embed.js');document.head.appendChild(hypothesis);"><button class="italic no-underline h4" >Anotar</button></span></li>
+      {% endif %}
     </ul>
   </div>
 </header>
