--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,4 @@
 <header class="px-2 clearfix">
-  <!-- <div class="left-lg absolute-lg left-0 top-0 sm-width-full mt-2">
-    <a class="no-underline-hover px-1" href="{{ site.baseurl }}/">
-      <span class="inline-block h4 hide-sm ml-2">&#x261c;</span>
-    </a>
-    <a class="italic no-underline" href="{{ site.baseurl }}/">
-       home
-    </a>
-  </div> -->
   <div class="right-lg absolute-lg right-0 top-0">
     <ul class="mt-1 mt-lg-2 mr-2 mr-lg-3">
       <li class="inline-block block-lg text-right ml-1 ml-lg-0">
@@ -25,7 +17,7 @@
         {% endif %}
       {% endfor %}
       {% if page.type == "texto" %}
-        <li class="inline-block block-lg text-right ml-1 ml-lg-0"><span style='cursor:pointer;' onclick="javascript:var hypothesis = document.createElement('script');hypothesis.setAttribute('src','https://hypothes.is/embed.js');document.head.appendChild(hypothesis);"><button class="italic no-underline h4" >Anotar</button></span></li>
+        <li class="inline-block block-lg text-right ml-1 ml-lg-0"><span style='cursor:pointer;' onclick="javascript:var hypothesis = document.createElement('script');hypothesis.setAttribute('src','https://hypothes.is/embed.js');document.head.appendChild(hypothesis);"><button class="italic h4" >Anotar</button></span></li>
       {% endif %}
     </ul>
   </div>
