names grid and modals

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,10 +13,19 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <link rel="stylesheet" href="{{ "/assets/bootstrap.css" | prepend: full_base_url }}">
+
+
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
+      <!-- Latest jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script> 
 
 </head>
