--- a/_includes/card.html
+++ b/_includes/card.html
@@ -8,7 +8,7 @@
           </figure>
         {% else %}
           <figure class="post-card__placehold">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Conquistador_Armor.jpg" alt="conquistador-img"/>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Conquistador_Armor.jpg/256px-Conquistador_Armor.jpg" alt="conquistador-img"/>
             <noscript><img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Conquistador_Armor.jpg" alt="conquistador-img"/></noscript>
           </figure>
         {% endif %}
