add more people to map and more img

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,5 +1,5 @@
   	<!-- Cards-->
-    <div class="post-card" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting">
+    <div class="post-card" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting" id="{{personaje.lnk}}">
       <a href="#portfolioModal-{{personaje.lnk}}" class="portfolio-link" data-toggle="modal">
         {% if personaje.img %}
           <figure class="post-card__placehold">
