--- a/_layouts/textoporpagina.html
+++ b/_layouts/textoporpagina.html
@@ -15,10 +15,27 @@ layout: default
 </article>
 
 
-<div class="text-container clearfix prose mx-auto px-2" itemprop="articleBody">
+<div id="main" class="text-container clearfix prose mx-auto px-2" itemprop="articleBody">
     {{ content }}
 </div>
 
 <div class="container mx-auto px-2 py-2 clearfix">
   {% include previous-next.html %}
 </div>
+
+
+<script>
+    var url = window.location.href;
+      if (url.lastIndexOf("?q=") > 0) {
+        // get the index of the parameter, add three (to account for length)
+        var stringloc = url.lastIndexOf("?q=") + 3;
+        // get the substring (query) and decode
+        var searchquery = decodeURIComponent(url.substr(stringloc));
+        // regex matches at begnning of line, end of line or word boundary, useful for poetry
+        var regex = new RegExp("(?:^|\\b)(" + searchquery + ")(?:$|\\b)", "gim");
+        // get, add mark and then set content
+        var content = document.getElementById("main").innerHTML;
+        document.getElementById("main").innerHTML = content.replace(regex, "<mark>$1</mark>");
+      }
+      (document);
+</script> 
