--- a/_includes/card.html
+++ b/_includes/card.html
@@ -6,10 +6,12 @@
             <img src="{{personaje.img}}" alt="{{personaje.nombre}}-img"/>
             <noscript><img src="{{personaje.img}}" alt="{{personaje.nombre}}-img"/></noscript>
           </figure>
+          <p style="font-size: 10px; text-align:left;"><a class="no-underline" href="{{personaje.fuente_url}}">{{personaje.fuente}}</a> / <a class="no-underline" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA</a></p>
         {% else %}
           <figure class="post-card__placehold">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Conquistador_Armor.jpg/256px-Conquistador_Armor.jpg" alt="conquistador-img"/>
-            <noscript><img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Conquistador_Armor.jpg" alt="conquistador-img"/></noscript>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Conquistador_Armor.jpg/256px-Conquistador_Armor.jpg" alt="conquistador-img" title="via Wikimedia Commons"/>
+            <noscript><img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Conquistador_Armor.jpg" alt="conquistador-img" title="via Wikimedia Commons"/></noscript>
+            <p style="font-size: 10px; text-align:left;"><a class="no-underline" href="https://commons.wikimedia.org/wiki/File:Conquistador_Armor.jpg">Conquistador Armor, Asele, S.</a> / <a class="no-underline" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA</a></p>
           </figure>
         {% endif %}
       </a>
@@ -21,4 +23,3 @@
         </div>
       </a>
     </div>
-
