--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -9,8 +9,13 @@
           </div>
           <div class="modal-body">
             <p>{{personaje.content}}</p> 
+            <h5 class="mt-4 mb-1">{{personaje.nombre }} en La Argentina Manuscrita:</h5>
+            <p class="text-right italic" style="font-size: 14px;">{{personaje.detalle}}</p>
+            <p class="text-right italic" style="font-size: 14px;"><a class="no underline" href="{{site.baseurl}}/argentina_manuscrita_pages/{{personaje.pagina}}?q={{personaje.nombre}}">[ver en el texto]</a></p>
             <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
     </div>
+
+
