--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
-
+  <script src="https://kit.fontawesome.com/2ed8463a5f.js"></script>
 
 </head>
