--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -98,3 +98,10 @@ a:hover {
   border-bottom: none;
   cursor: default;
 }
+
+/* Voyant */
+iframe {
+  width: 100%;
+  height: 450px;
+  border: none;
+}
