--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
       </a></span>
     </div>
     <div class="mb-4 clearfix" style="text-align: center;">
-      <span> {{ site.time | date: '%Y' }} {{ site.title | escape }}. ISSN 1668-0001. CC BY 4.0</span>
+      <span> {{ site.time | date: '%Y' }} {{ site.title | escape }}. ISSN 1668-0001. <a href="https://n2t.net/ark:/69774/rgm2020">https://n2t.net/ark:/69774/rgm2020</a>. CC BY 4.0</span>
     </div>
 
 </div>
