--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
     <div class="mb-4 clearfix" style="text-align: center;">
       <span> 
         <ul>
-          <li class="no_bullet">{{ site.time | date: '%Y' }} {{ site.title | escape }}. <a href="https://n2t.net/ark:/69774/hda2015">https://n2t.net/ark:/69774/hda2015</a></li>
+          <li class="no_bullet">{{ site.time | date: '%Y' }} {{ site.title | escape }}. <a href="https://n2t.net/ark:/69774/hda2015">https://n2t.net/ark:/69774/rgm2020</a></li>
           <li class="no_bullet">CC BY 4.0</li>
           <li class="no_bullet">Marcelo T. de Alvear 1694 – Buenos Aires (CABA) – Argentina</li>
           <li class="no_bullet">secrit@conicet.gov.ar / hdlabconicet@gmail.com</li>
