--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,5 +38,5 @@
         </ul>
       </span>
     </div>
-
+    <img class="right" src="https://raw.githubusercontent.com/hdlabconicet/viaje-al-rio-de-la-plata/master/assets/img/we-use-tei.png"/ style="max-width: 30%; text-align: right;"/>
 </div>
